# django-wsgi-psql-tailwindcss-template

./: Dockerfile.development  Dockerfile.production  README.md  entrypoint.sh  package-lock.json  pyproject.toml
app/: manage.py
app/core/: asgi.py  settings.py  urls.py
